--- a/Layout/index.html
+++ b/Layout/index.html
@@ -10,8 +10,18 @@
 
 <body>
   <div id="grid">
-    <header>Header</header>
-    <filter>Filter</filter>
+    <header>
+      <p>#ЗадизайнХату</p>
+      <div>
+          <input id="search" type="text" placeholder="Поиск">
+          <a id="login" class="font-color-gray" href="#">Войти</a>
+      </div>
+    </header>
+    <filter>
+      <li>Услуги</li>
+      <li>Деньги</li>
+      <li>Город</li>
+    </filter>
     <main>Main</main>
     <footer>Footer</footer>
   </div>
