Add layout for main page

--- a/Layout/index.html
+++ b/Layout/index.html
@@ -11,9 +11,9 @@
 <body>
   <div id="grid">
     <header>
-      <p>#ЗадизайнХату</p>
+      <p class="font-color-gray">#ЗАДИЗАЙНХАТУ</p>
       <div>
-          <input id="search" type="text" placeholder="Поиск">
+          <!-- <input id="search" type="text" placeholder="Поиск"> -->
           <a id="login" class="font-color-gray" href="#">Войти</a>
       </div>
     </header>
@@ -22,7 +22,30 @@
       <li>Деньги</li>
       <li>Город</li>
     </filter>
-    <main>Main</main>
+    <main>
+      <a href="google.com">
+        <div class="design-studio">
+          <img src="1.jpg">
+          <div class="studio-name">
+            <p>Veranda Design Studio</p>
+          </div>
+        </div>
+      </a>
+      <a href="google.com">
+        <div class="design-studio">
+          <img src="2.jpg">
+          <div class="studio-name">
+              <p>Mahno</p>
+            </div>
+        </div>
+      </a>
+      <div class="design-studio">
+        <img src="3.jpg">
+        <div class="studio-name">
+            <p>MarinaStudio</p>
+          </div>
+      </div>
+    </main>
     <footer>Footer</footer>
   </div>
 </body>
