Style without header

--- a/Layout/index.html
+++ b/Layout/index.html
@@ -10,14 +10,15 @@
 
 <body>
   <div id="grid">
-    <header>
+    <!-- <header>
       <p class="font-color-gray">#ЗАДИЗАЙНХАТУ</p>
       <div>
-          <!-- <input id="search" type="text" placeholder="Поиск"> -->
+          <input id="search" type="text" placeholder="Поиск">
           <a id="login" class="font-color-gray" href="#">Войти</a>
       </div>
-    </header>
+    </header> -->
     <filter>
+      <p id="logo" class="font-color-gray">#ЗАДИЗАЙНХАТУ</p>
       <li>Услуги</li>
       <li>Деньги</li>
       <li>Город</li>
@@ -45,7 +46,32 @@
             <p>MarinaStudio</p>
           </div>
       </div>
+      <a href="google.com">
+          <div class="design-studio">
+            <img src="1.jpg">
+            <div class="studio-name">
+              <p>Veranda Design Studio</p>
+            </div>
+          </div>
+        </a>
+        <a href="google.com">
+            <div class="design-studio">
+              <img src="2.jpg">
+              <div class="studio-name">
+                  <p>Mahno</p>
+                </div>
+            </div>
+          </a>
+          <div class="design-studio">
+            <img src="3.jpg">
+            <div class="studio-name">
+                <p>MarinaStudio</p>
+              </div>
+          </div>
     </main>
+    <div id="login" >
+        <a class="font-color-gray" href="#">Войти</a>
+    </div>
     <footer>Footer</footer>
   </div>
 </body>
