--- a/Layout/style.css
+++ b/Layout/style.css
@@ -33,8 +33,7 @@ html, body {
     display: grid;
     grid-template-rows: auto 1fr auto;
     grid-template-columns: 230px 1fr;
-    grid-template-areas: "header header"
-                       "filter  main"
+    grid-template-areas: "filter  main"
                        "footer footer"
 }
 
@@ -52,9 +51,10 @@ html, body {
 
 /*Header*/
 
-header > p {
+#logo {
     margin: 0;
-    font-size: 21pt;
+    font-size: 16pt;
+    margin: 15px;
 }
 
 header > div{
@@ -69,19 +69,38 @@ header > div{
     margin-right: 10px;
 }
 
-#login{
+/* #login{
     letter-spacing: 0px;
     font-size: 13pt;
+    text-decoration:none;
+} */
+
+#login {
+    position: fixed;
+    right: 15px;
+    top: 15px;
+    background-color: rgba(243, 242, 242, 0.7);
+    height: 40px;
+    line-height: 40px;
+    width: 80px;
+    overflow: hidden;
+    text-align: center;
+}
+
+#login > a {
+    color: black;
     text-decoration:none;
 }
 
 /*Filter*/
 
 #grid > filter {
+    position: fixed;
     text-align: center;
     margin-top: 25px;
     list-style-type: none;
     text-transform: uppercase;
+    width: 230px;
 }
 
 filter > li {
@@ -97,7 +116,7 @@ filter > li {
 
 .design-studio {
     /* background-color: rgb(238,238,238, 0.6); */
-    height: 400px;
+    max-height: 350px;
     text-align: center;
     margin: 15px;
     overflow: hidden;
@@ -106,6 +125,7 @@ filter > li {
 
 .design-studio > img {
     max-width: 100%;
+
 }
 
 .studio-name {
