--- a/Web/zh-app/src/app/modules/home/components/main/main.component.html
+++ b/Web/zh-app/src/app/modules/home/components/main/main.component.html
@@ -1,3 +1,1 @@
-<p>
-</p>
-<div id="design-studio-preview" *ngFor="let studio of designStudios" [parentData]="studio"></div>
+<div id="design-studio-preview" *ngFor="let studio of designStudios" [designStudio]="studio"></div>
