--- a/Web/zh-app/src/app/modules/home/components/design-studio-preview/design-studio-preview.component.html
+++ b/Web/zh-app/src/app/modules/home/components/design-studio-preview/design-studio-preview.component.html
@@ -1,1 +1,8 @@
-{{parentData.name}}
+<a href="http:\\google.com">
+    <div class="design-studio">
+      <img src="{{designStudio.coverPath}}">
+      <div class="studio-name">
+        <p>{{designStudio.name}}</p>
+      </div>
+    </div>
+  </a>
