--- a/Web/zh-app/src/app/modules/home/components/design-studio-preview/design-studio-preview.component.scss
+++ b/Web/zh-app/src/app/modules/home/components/design-studio-preview/design-studio-preview.component.scss
@@ -11,3 +11,21 @@
     max-width: 100%;
 
 }
+
+.studio-name {
+    position: absolute;
+    width: 100%;
+    height: 50px;
+    line-height: 50px;
+    left: 0px;
+    bottom: 0px;
+    background-color: rgba(179, 179, 179, 0.7);
+    text-align: center;
+    font-size: 15pt;
+    color: rgb(245, 245, 245);
+    letter-spacing: 0.4px;
+}
+
+.studio-name > p {
+    margin: 0;
+}
