--- a/Web/zh-app/src/app/modules/home/components/design-studio-preview/design-studio-preview.component.html
+++ b/Web/zh-app/src/app/modules/home/components/design-studio-preview/design-studio-preview.component.html
@@ -2,7 +2,7 @@
     <div class="design-studio">
       <img src="{{designStudio.coverPath}}">
       <div class="studio-name">
-        <p>{{designStudio.name}}</p>
+        <p>{{designStudio.name}} Цена от {{designStudio.prices[0].min}}</p>
       </div>
     </div>
   </a>
