--- a/Web/zh-app/src/app/modules/home/components/main/main.component.scss
+++ b/Web/zh-app/src/app/modules/home/components/main/main.component.scss
@@ -12,6 +12,12 @@
 
 }
 
+#main {
+    height: 100%;
+    display: grid;
+    grid-template-columns: 1fr 1fr
+}
+
 .studio-name {
     position: absolute;
     width: 100%;
