--- a/Web/zh-app/src/app/modules/home/components/main/main.component.html
+++ b/Web/zh-app/src/app/modules/home/components/main/main.component.html
@@ -1,1 +1,3 @@
-<div id="design-studio-preview" *ngFor="let studio of designStudios" [designStudio]="studio"></div>
+<div id="main">
+    <div id="design-studio-preview" *ngFor="let studio of designStudios" [designStudio]="studio"></div>
+</div>
