--- a/Web/zh-app/src/app/modules/home/pages/app.component.html
+++ b/Web/zh-app/src/app/modules/home/pages/app.component.html
@@ -1,5 +1,7 @@
 <div id="grid">
-    <div id="leftbar"></div>
+    <div id="leftbar">
+        
+    </div>
         <router-outlet></router-outlet>
 </div>
   
