Support Details\FIlter for routing

--- a/Web/zh-app/src/app/core/leftbar/leftbar.component.html
+++ b/Web/zh-app/src/app/core/leftbar/leftbar.component.html
@@ -5,6 +5,6 @@
 <li>Город</li>
 </div>
 <div [ngSwitch]="GetPageState()">
-    <div *ngSwitchCase="'filter'">Hello filter</div>
-    <div *ngSwitchCase="'details'">Hello details</div>
+    <div *ngSwitchCase="'designstudiolist'">Hello filter</div>
+    <div *ngSwitchCase="'designstudio'">Hello details</div>
 </div>
