--- a/Web/zh-app/src/app/modules/home/components/design-studio-preview/design-studio-preview.component.html
+++ b/Web/zh-app/src/app/modules/home/components/design-studio-preview/design-studio-preview.component.html
@@ -1,4 +1,4 @@
-<a href="http:\\google.com">
+<a routerLink="/designstudio">
     <div class="design-studio">
       <img src="{{designStudio.coverPath}}">
       <div class="studio-name">
