Add DesignStudion shared data service

--- a/Web/zh-app/src/app/core/leftbar/leftbar.component.html
+++ b/Web/zh-app/src/app/core/leftbar/leftbar.component.html
@@ -5,6 +5,6 @@
 <li>Город</li>
 </div>
 <div [ngSwitch]="GetPageState()">
-    <div *ngSwitchCase="'designstudiolist'">Hello filter</div>
-    <div *ngSwitchCase="'designstudio'">Hello details</div>
+    <div *ngSwitchCase="'designstudiolist'" id=''>Hello filter</div>
+    <div *ngSwitchCase="'designstudio'" id='design-studio-details'></div>
 </div>
