--- a/Web/zh-app/src/app/modules/home/components/design-studio-details/design-studio-details.component.html
+++ b/Web/zh-app/src/app/modules/home/components/design-studio-details/design-studio-details.component.html
@@ -1,5 +1,6 @@
 <p>
   design-studio-details works!
 </p>
-<div><p>{{dsid}}</p></div>
+
+<div><p *ngIf="designStudio != undefined">{{designStudio.name}}</p></div>
   
