--- a/Web/zh-app/src/app/modules/home/components/design-studio/design-studio.component.html
+++ b/Web/zh-app/src/app/modules/home/components/design-studio/design-studio.component.html
@@ -1,4 +1,4 @@
 Hello
-<p *ngIf="designStudio != undefined">
-  {{designStudio.name}}
+<p *ngIf="dsPorfolios != undefined">
+  {{dsPorfolios[0].name}}
 </p>
