Design studio filter working

--- a/Web/zh-app/src/app/modules/home/components/design-studio-filter/design-studio-filter.component.html
+++ b/Web/zh-app/src/app/modules/home/components/design-studio-filter/design-studio-filter.component.html
@@ -1,3 +1,7 @@
 <p>
-  design-studio-filter works!
+  Цена от:
 </p>
+<input #fromAmount type="text">
+<input #toAmount type="text">
+<input #name type="text">
+<button (click)="searchDesignStudios(fromAmount.value, toAmount.value, name.value)">Пошук</button>
