--- a/Web/zh-app/src/app/modules/home/components/design-studio-preview/design-studio-preview.component.html
+++ b/Web/zh-app/src/app/modules/home/components/design-studio-preview/design-studio-preview.component.html
@@ -1,6 +1,15 @@
 <div class="design-studio">
+  <div class="studio-name">{{designStudio.name}}</div>
   <img (click)="onSelect(designStudio.id)" src="{{designStudio.coverPath}}">
-  <div class="studio-name">
-    <p>{{designStudio.name}} Цена от {{designStudio.prices[0].min}}</p>
+  <div class="studio-info">
+    <div class="price">
+        <div>Від</div>
+        <div>{{designStudio.prices[0].min}}</div>
+        <div> грн\кв2</div>
+    </div>
+    <div class="rating">
+      <div>4.1</div>
+      <img src="https://img.icons8.com/color/48/000000/filled-star.png">
+    </div>
   </div>
 </div>
