--- a/Web/zh-app/src/app/modules/home/components/design-studio-preview/design-studio-preview.component.scss
+++ b/Web/zh-app/src/app/modules/home/components/design-studio-preview/design-studio-preview.component.scss
@@ -1,8 +1,8 @@
 .design-studio {
     /* background-color: rgb(238,238,238, 0.6); */
-    max-height: 350px;
+    max-height: 450px;
     text-align: center;
-    margin: 15px;
+    margin: 15px 10px 0 10px;
     overflow: hidden;
     position: relative;
 }
@@ -13,19 +13,67 @@
 }
 
 .studio-name {
+    font-size: 15pt;
+    padding: 5px 0 5px 10px;
+    text-align: left;
+}
+
+.studio-info {
     position: absolute;
     width: 100%;
-    height: 50px;
-    line-height: 50px;
+    height: 40px;
+    line-height: 40px;
     left: 0px;
     bottom: 0px;
-    background-color: rgba(179, 179, 179, 0.7);
-    text-align: center;
-    font-size: 15pt;
+    background-color: rgba(182, 182, 182, 0.904);
+    text-align: left;
+    font-size: 12pt;
     color: rgb(245, 245, 245);
     letter-spacing: 0.4px;
 }
 
-.studio-name > p {
+.price {
+    width: 80%;
+    display:inline-block;
     margin: 0;
 }
+
+.price > div {
+    display:inline-block;
+    margin: 0;
+}
+
+.price > div:nth-child(1) {
+    font-size: 9pt;
+    padding: 0 5px 0 5px;
+}
+
+.price > div:nth-child(2) {
+    font-size: 12pt;
+    padding-right: 5px;
+    margin: 0;
+    font-weight: bold;
+}
+
+.price > div:nth-child(3) {
+    font-size: 9pt;
+}
+
+.rating {
+    width: 20%;
+    display:inline-block;
+    margin: 0;
+    text-align: right;
+}
+
+.rating > img {
+    height: 15px;
+    display:inline-block;
+    padding-right: 5px;
+}
+
+.rating > div {
+    display:inline-block;
+    padding-right: 5px;
+}
+
