Style of design studio preview component

--- a/Web/zh-app/src/app/modules/home/components/design-studio-preview/design-studio-preview.component.scss
+++ b/Web/zh-app/src/app/modules/home/components/design-studio-preview/design-studio-preview.component.scss
@@ -1,10 +1,13 @@
 .design-studio {
-    max-height: 450px;
+    padding: 10px;
+    max-height: 470px;
     text-align: center;
     margin: 15px 10px 0 10px;
     overflow: hidden;
     position: relative;
     border-bottom: 1px solid rgb(196, 196, 196);
+    background-color: white;
+    box-shadow: 0 0 3px rgba(0,0,0,0.1);
 }
 
 .studio-cover {
@@ -23,29 +26,34 @@
     width: 100%;
 }
 
-.studio-name {
-    font-size: 15pt;
-    padding: 5px 0 5px 10px;
+// Studio info lin 1
+.line1, .line2 {
+    width: 100%;
     text-align: left;
+    position: relative;
 }
 
-.studio-info {
-    position: absolute;
-    width: 100%;
-    height: 40px;
-    line-height: 40px;
-    left: 0px;
-    bottom: 0px;
-    background-color: rgba(124, 124, 124, 0.685);
+.line1 > div:nth-child(1) {
+    margin-right: 100px;
+}
+
+.studio-name {
+    font-size: 15pt;
+    padding: 10px 0 5px 0px;
     text-align: left;
-    font-size: 12pt;
-    color: rgb(245, 245, 245);
-    letter-spacing: 0.4px;
+    font-weight: bold;
+    color: #444;
+}
+
+.line1 > div:nth-child(2) {
+    width: 100px;
+    text-align: right;
+    position: absolute;
+    top: 15px;
+    right: 0;
 }
 
 .price {
-    width: 80%;
-    display:inline-block;
     margin: 0;
 }
 
@@ -60,7 +68,7 @@
 }
 
 .price > div:nth-child(2) {
-    font-size: 12pt;
+    font-size: 11pt;
     padding-right: 5px;
     margin: 0;
     font-weight: bold;
@@ -70,9 +78,22 @@
     font-size: 9pt;
 }
 
+// Studio info line 2
+.line2 > div:nth-child(1) {
+    margin-right: 100px;
+    font-size: 11pt;
+    padding-top: 2px;
+}
+
+.line2 > div:nth-child(2) {
+    width: 100px;
+    text-align: right;
+    position: absolute;
+    top: 0;
+    right: 0;
+}
+
 .rating {
-    width: 20%;
-    display:inline-block;
     margin: 0;
     text-align: right;
 }
@@ -80,7 +101,6 @@
 .rating > img {
     height: 15px;
     display:inline-block;
-    padding-right: 5px;
 }
 
 .rating > div {
