--- a/Web/zh-app/src/app/modules/home/components/design-studio-filter/design-studio-filter.component.scss
+++ b/Web/zh-app/src/app/modules/home/components/design-studio-filter/design-studio-filter.component.scss
@@ -15,7 +15,7 @@ input {
 }
 
 .price {
-    width: 82px;
+    width: 84px;
 }
 
 input[type=number]::-webkit-inner-spin-button, 
@@ -26,10 +26,10 @@ input[type=number]::-webkit-outer-spin-button {
 
 .range {
     width:100%;
-    height:10px;
+    height:8px;
 
     position: relative;
-    border-radius: 4px;
+    border-radius: 2px;
     background-color: #ddd;
 }
 
@@ -37,22 +37,27 @@ input[type=number]::-webkit-outer-spin-button {
     position: absolute;
     top: 50%;
 
-    width: 20px;
-    height: 20px;
-
-    cursor: move;
+    width: 15px;
+    height: 15px;
+  
     transform: translateY(-50%);
 
     border: none;
     border-radius: 50%;
-    background-color: #999;
+    background-color: rgb(243, 243, 243);
+    border: #838383 1px solid;
 }
+
+.range__button_1:hover, .range__button_2:hover {
+    border-color: #2dbd58;
+}
+
 .range__between
 {
   position: absolute;
-    height: 5px;
+    height: 3px;
     width:0px;
-    margin-top:3px;
+    margin-top:2px;
     border: none;
-    background-color: #559933;
+    background-color: #2dbd58;
 }
