Style for edit fields of filters

--- a/Web/zh-app/src/app/modules/home/components/design-studio-filter/design-studio-filter.component.scss
+++ b/Web/zh-app/src/app/modules/home/components/design-studio-filter/design-studio-filter.component.scss
@@ -12,19 +12,26 @@ $border-color: rgb(197, 197, 197);
 #name {
     margin: 10px 0 0 0;
     width: 100%;
-    height: 25px;
+    height: 40px;
     border: 0;
     border-bottom: 1px solid  rgb(97, 96, 96);
+    padding: 0 0 0 10px;
+    box-sizing: border-box;
+}
+
+#name::-webkit-input-placeholder{
+    font-style: italic;
 }
 
 #priceFrom, #priceTo {
     width: 64px;
-    height: 25px;
+    height: 25px;   
     outline: none;
     text-align: center;
     border: 0;
     border-bottom: 1px solid rgb(97, 96, 96); 
     padding: 0 3px 0 3px;
+    margin: 0 0 0 8px;
 }
 
 #search_button {
@@ -37,11 +44,12 @@ $border-color: rgb(197, 197, 197);
     letter-spacing: 0.1em;
     font-size: 10pt;
     padding: 0;
+    margin: 20px 0 0 0;
 }
 
 #search_button:hover {
     border: 0px;
-    background-color: #2dbd58;
+    background-color: rgb(97, 96, 96);
     color: white;
 }
 
@@ -50,7 +58,7 @@ $border-color: rgb(197, 197, 197);
 }
 
 #search_button:active {
-    background-color:  #4ac56f;
+    background-color: rgb(97, 96, 96);
     color: white;
     border: 0px;
 }
@@ -60,16 +68,6 @@ input[type=number]::-webkit-inner-spin-button,
 input[type=number]::-webkit-outer-spin-button { 
   -webkit-appearance: none; 
   margin: 0; 
-}
-
-.range {
-    width:100%;
-    height:8px;
-
-    position: relative;
-    border-radius: 2px;
-    background-color: #ddd;
-    margin-bottom: 15px;
 }
 
 .range__button_1, .range__button_2 {
@@ -92,19 +90,30 @@ input[type=number]::-webkit-outer-spin-button {
 }
 
 .range__button_1:hover, .range__button_2:hover {
-    border-color: #2dbd58;
+    border-color: rgb(97, 96, 96);
 }
 
 .range__button_1:active, .range__button_2:active {
-    border-color: #2dbd58;
+    border-color: rgb(97, 96, 96);
+}
+
+
+.range {
+    width:100%;
+    height:6px;
+
+    position: relative;
+    border-radius: 1px;
+    background-color: #ddd;
+    margin: 20px 0 10px 0;
 }
 
 .range__between
 {
   position: absolute;
-    height: 3px;
+    height: 2px;
     width:200px;
-    margin-top:3px;
+    margin-top:2px;
     border: none;
     background-color:rgb(97, 96, 96);
 }
