--- a/Web/zh-app/src/app/modules/home/components/design-studio-filter/design-studio-filter.component.html
+++ b/Web/zh-app/src/app/modules/home/components/design-studio-filter/design-studio-filter.component.html
@@ -11,8 +11,8 @@
       <button id='id661' class="range__button_1" style='margin-left:0px;' (mousedown)="buttonLeftOnMouseDown($event)"></button>
       <button id='id662' class="range__button_2" (mousedown)="buttonRightOnMouseDown($event)"></button>
   </div>
-  <input id="name" #name type="text">
-  <input id="name" #name type="text">
-  <input id="name" #name type="text">
+  <input id="name" #name type="text" placeholder="Назва">
+  <input id="name" #name type="text" placeholder="Місто">
+  <input id="name" #name type="text" placeholder="Інше">
   <button id="search_button" (click)="searchDesignStudios(priceFrom.value, priceTo.value, null)">ПОШУК</button>
 </div>
